figue/tests/integration/snapshots/main__integration__ariadne__ariadne_missing_argument.snap
---
source: crates/figue/tests/integration/ariadne.rs
expression: ariadne_output
---
main

USAGE:
    main [OPTIONS]

OPTIONS:
        --required-field <STRING>


Error: missing required argument
   ╭─[ <usage>:1:6 ]
   │
 1 │ main --required-field <required-field>
   │      ────────────────┬────────────────  
   │                      ╰────────────────── missing required argument
───╯
